--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component('Artists', title: 'Artist database', artists: @artists, authenticity_token: form_authenticity_token) %>
+<%= react_component('Artists', { title: 'Artist database', artists: @artists, authenticity_token: form_authenticity_token }, {prerender: true}) %>
